index.html   index.js    style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
   <title>JavaScript Lab</title>
 </head>
 <body>
-  hello
-  <script type="text/javascript" src="index.js"></script>
+  <h1>Javasript function</h1>
+
+  <h2>saturday fun</h2>
+  <button onclick="showSaturdayFun()">Default Activity</button>
+ <button onclick="showSaturdayFun('bathe my dog')">Custom Activity</button>
+<div id="saturday-fun-result" class="result"></div>
+
+<h2>Monday Work</h2>
+<button onclick="showMondayWork()"> Default Activity</button>
+<button onclick="showMondayWork('work from home')">Custom Activity</button>
+<div id="monday-work-result" class="result"></div>
+
+<h2>Wrapper Adjective</h2>
+<button onclick="showWrapAdjective('*', 'a hard worker')">Wrap with *</button>
+<button onclick="showWrapAdjective('||', 'a dedicated programmer')">Wrap with ||</button>
+<div id="Wrap-adjective-result" class="result"></div>
+
+ <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
